[tool.poetry]
name = "zxbasic"
version = "1.17.3"
description = "Boriel's ZX BASIC Compiler"
authors = ["Jose Rodriguez <boriel@gmail.com>"]
license = "AGPL-3.0-or-later"
documentation = "https://zxbasic.readthedocs.io"
repository = "https://github.com/boriel/zxbasic"
homepage = "http://zxbasic.net"
readme = "README.md"

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Build Tools',
        'License :: OSI Approved :: GNU Affero General Public License v3',
        'Programming Language :: Python :: 3.12',
        ]

keywords = ['compiler', 'zxspectrum', 'BASIC', 'z80']  # arbitrary keywords

packages = [
    { include = "src/**/*" }
]

[tool.poetry.scripts]
zxb = 'src.libzxbc.zxb:main'
zxbc = 'src.libzxbc.zxb:main'
zxbasm = 'src.libzxbasm.zxbasm:main'
zxbpp = 'src.libzxbpp.zxbpp:entry_point'

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "*"
bump2version = "^1.0.0"
pre-commit = "*"
mkdocs = "^1.2.2"
poethepoet = "*"
pytest-cov = "*"
ruff = "*"
mypy = "^1.8.0"
pytest-xdist = "*"
setuptools = "^70.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
[[tool.poe.tasks.lint]]
help = "Check code style and typing..."
shell = """
    ruff check . &&
    ruff format --check . &&
    mypy .
    """

[[tool.poe.tasks.test]]
help = "Run tests"
shell = "pytest tests"

[[tool.poe.tasks.test-no-cov]]
help = "Run tests faster (with no coverage)"
shell = "pytest tests --no-cov"

[[tool.poe.tasks.format]]
help = "Formats code"
shell = """
    ruff check --select I --fix .
    ruff format .
    """

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "src/ply/*"
]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["test_*tmp", "runtime"]
addopts = "--cov=src -n auto --dist=loadgroup --color=yes"

[tool.mypy]
check_untyped_defs = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "has-type",
    "import-not-found",
    "list-item",
    "misc",
    "name-defined",
    "operator",
    "override",
    "return-value",
    "union-attr",
    "var-annotated",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "C4", "UP", "RUF"]
ignore = [
    "E713",
    "E722",
    "E731",
    "E741",
    "RUF005",
    "RUF012",
    "RUF013",
    "RUF100",
    "UP008",
    "UP015",  # KEEP: redundant-open-modes
    "UP024",
    "UP028",
    "UP030",
    "UP031",
    "UP038",
]
